@@ -88,9 +88,14 @@ class DateIndex(UnIndex, PropertyManager):
                   'mode':'w'},)
 
     manage = manage_main = DTMLFile( 'dtml/manageDateIndex', globals() )
+    manage_browse = DTMLFile('../dtml/browseIndex', globals())
+
     manage_main._setName( 'manage_main' )
     manage_options = ( { 'label' : 'Settings'
                        , 'action' : 'manage_main'
+                       },
+                       {'label': 'Browse',
+                        'action': 'manage_browse',
                        },
                      ) + PropertyManager.manage_options
 
@@ -98,7 +103,7 @@ class DateIndex(UnIndex, PropertyManager):
         """ Complete reset """
         self._index = IOBTree()
         self._unindex = OIBTree()
-
+        self._length.set(0)
 
     def index_object( self, documentId, obj, threshold=None ):
         """index an object, normalizing the indexed value to an integer
