@@ -2,7 +2,9 @@
 <dtml-var manage_tabs>
 
 <p class="form-help">
-Nothing to manage at this time.
+Objects indexed: <dtml-var numObjects>
+<br>
+Distinct values: <dtml-var indexSize>
 </p>
 
 
