@@ -6,6 +6,12 @@ You can update this DateRangeIndex by editing the following field and clicking
 <emUpdate</em>.
 </p>
 
+<p>
+Objects indexed: <dtml-var numObjects>
+<br>
+Distinct values: <dtml-var indexSize>
+</p>
+
 <form action="&dtml-URL1;/manage_edit" method="POST">
 <table cellpadding="2" cellspacing="0" border="0">
 <tr>
