@@ -142,7 +142,7 @@ class TestKeywordIndex( unittest.TestCase ):
         assert ( self._index.getEntryForObject( 1234, self._marker )
                   is self._marker )
         self._index.unindex_object( 1234 ) # nothrow
-        self.assertEqual(self._index.numObjects(), len( values )-1)
+        self.assertEqual(self._index.indexSize(), len( values )-1)
 
         for k, v in values:
             entry = self._index.getEntryForObject( k )
