@@ -104,13 +104,13 @@ function toggleSelect() {
   </td>
 
   <td width="20%" align="left"><div class="list-item"><a 
-   href="./manage_catalogIndexes?skey=numObjects<dtml-if 
-   "rkey == ''">&rkey=numObjects</dtml-if
+   href="./manage_catalogIndexes?skey=indexSize<dtml-if 
+   "rkey == ''">&rkey=indexSize</dtml-if
    >"
-   onMouseOver="window.status='Sort objects by number of indexed objects'; return true"
+   onMouseOver="window.status='Sort objects by number of distinct values indexed'; return true"
    onMouseOut="window.status=''; return true"><dtml-if 
-   "skey == 'numObjects' or rkey == 'numObjects'"
-   ><strong># objects</strong><dtml-else># objects</dtml-if></a></div>
+   "skey == 'indexSize' or rkey == 'indexSize'"
+   ><strong># distinct values</strong><dtml-else># distinct values</dtml-if></a></div>
   </td>
 
   <td width="20%" align="left"><div class="list-item"><a 
@@ -169,7 +169,7 @@ function toggleSelect() {
 
     <td>
       <div class="list-item">
-        <dtml-var numObjects missing="n/a">
+        <dtml-var indexSize missing="n/a">
       </div>
     </td>
 
@@ -183,6 +183,7 @@ function toggleSelect() {
 
 </tr>
 </dtml-in>
+
 </table>
 
 <table cellspacing="0" cellpadding="2" border="0">
